--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -12,13 +12,13 @@
 //     font-weight: 100;
 //     font-style: italic;
 // }
-// @font-face {
-//     font-family: 'SF Pro Display';
-//     font-display: swap;
-//     src: url('../fonts/SFProDisplay-Ultralight.ttf') format('truetype');
-//     font-weight: 200;
-//     font-style: normal;
-// }
+@font-face {
+    font-family: 'SF Pro Display';
+    font-display: swap;
+    src: url('../fonts/SFProDisplay-Ultralight.ttf') format('truetype');
+    font-weight: 200;
+    font-style: normal;
+}
 // @font-face {
 //     font-family: 'SF Pro Display';
 //     font-display: swap;
@@ -26,13 +26,13 @@
 //     font-weight: 200;
 //     font-style: italic;
 // }
-// @font-face {
-//     font-family: 'SF Pro Display';
-//     font-display: swap;
-//     src: url('../fonts/SFProDisplay-Light.ttf') format('truetype');
-//     font-weight: 300;
-//     font-style: normal;
-// }
+@font-face {
+    font-family: 'SF Pro Display';
+    font-display: swap;
+    src: url('../fonts/SFProDisplay-Light.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+}
 // @font-face {
 //     font-family: 'SF Pro Display';
 //     font-display: swap;
