готова модалка 16.02.2021 + новый стикер

--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -68,13 +68,13 @@
 //     font-weight: 500;
 //     font-style: italic;
 // }
-// @font-face {
-//     font-family: 'SF Pro Display';
-//     font-display: swap;
-//     src: url('../fonts/SFProDisplay-Semibold.ttf') format('truetype');
-//     font-weight: 600;
-//     font-style: normal;
-// }
+@font-face {
+    font-family: 'SF Pro Display';
+    font-display: swap;
+    src: url('../fonts/SFProDisplay-Semibold.ttf') format('truetype');
+    font-weight: 600;
+    font-style: normal;
+}
 // @font-face {
 //     font-family: 'SF Pro Display';
 //     font-display: swap;
