--- a/src/scss/UI/modal.scss
+++ b/src/scss/UI/modal.scss
@@ -5,7 +5,13 @@
     z-index: 10;
     position: fixed;
     top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     overflow-y: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     &--start {
         .modal__body {
@@ -54,12 +60,55 @@
                 }
             }
         }
+        &-3 {
+            .modal__body {
+                width: 630px;
+                box-shadow: 10px 0 30px 0 rgba(0, 0, 0, 0.3);
+                background-color: #fff;
+                .modal__body-blog {
+                    display: flex;
+                }
+                .modal__body-blog-content-form-3 {
+                    display: flex;
+
+                    .modal__body-blog-content-form-button {
+                        margin-top: 50px;
+                    }
+                }
+            }
+        }
+    }
+
+    &--rek {
+        .modal__body {
+            width: 630px;
+            box-shadow: 10px 0 30px 0 rgba(0, 0, 0, 0.3);
+            background-color: #fff;
+            .modal__body-rek {
+                display: flex;
+            }
+            .modal__body-rek-content-form {
+                display: flex;
+            }
+        }
+        &-2 {
+            .modal__body {
+                width: 630px;
+                box-shadow: 10px 0 30px 0 rgba(0, 0, 0, 0.3);
+                background-color: #fff;
+                .modal__body-rek {
+                    display: flex;
+                }
+                .modal__body-rek-content-form-2 {
+                    display: flex;
+                }
+            }
+        }
     }
     &__body {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        //margin: 50px auto; //or max-height: 95vh;
+        max-height: 95vh;
+        position: relative;
         box-shadow: 5px 10px 20px 0 rgba(0, 0, 0, 0.25%);
         z-index: 4;
     }
@@ -169,6 +218,14 @@
             background: #fff;
             width: 100%;
             padding: 40px;
+            &-title {
+                font-family: 'SF Pro Display', 'Arial', 'sans-serif';
+                color: #323232;
+                font-size: 18px;
+                font-weight: 600;
+                line-height: 1.5em;
+                text-align: center;
+            }
             &-text {
                 font-family: 'SF Pro Display', 'Arial', 'sans-serif';
                 color: #C4C4C4;
@@ -190,6 +247,92 @@
                     transition: width .6s ease;
                 }
             }
+            &-card {
+                width: 320px;
+                padding: 25px 16px;
+                border: 1px solid #c8ebf7;
+                border-radius: 14px;
+                margin-top: 8px;
+                &-input {
+                    padding-right: 25px;
+                    letter-spacing: .5px;
+                    padding-left: 7px;
+                    padding: 5px 25px 5px 7px;
+                    border-bottom: 1px solid #f0f0f3;
+                    outline: none;
+                    max-height: 30px;
+                    min-width: 180px;
+                    color: #000;
+                    &::placeholder {
+                        color: #000;
+                    }
+                }
+                &-svg {
+                    width: 46px;
+                    height: 38px;
+                }
+                &-row {
+                    margin-top: 40px;
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                }
+                &-text {
+                    font-family: 'SF Pro Display', 'Arial', 'sans-serif';
+                    font-size: 12px;
+                    font-weight: 400;
+                    line-height: 26px;
+                    &--error {
+                        color: #e61919;
+                        font-size: 12px;
+                        display: none;
+                    }
+                }
+                &-label {
+                    position: relative;
+                    &--error {
+                        .modal__body-blog-content-card-input {
+                            border-bottom: 1px solid #e61919;
+                        }
+                        .modal__body-blog-content-card-text--error {
+                            display: block;
+                        }
+                        .modal__body-blog-content-card-cross {
+                            display: block;
+                        }
+                    }
+                }
+                &-cross {
+                    top: -2px;
+                    right: 0;
+                    width: 32px;
+                    height: 32px;
+                    position: absolute;
+                    cursor: pointer;
+                    display: none;
+                }
+                &-description {
+                    display: flex;
+                    justify-content: flex-end;
+                    align-items: center;
+                    margin-top: 50px;
+                    &-text {
+                        font-family: 'SF Pro Display', 'Arial', 'sans-serif';
+                        font-size: 10px;
+                        margin-right: 7px;
+                        line-height: 16px;
+                        color: #000;
+                        font-weight: 400;
+                    }
+                    &-img {
+                        height: 23px;
+                        width: 23px;
+                        background: url('../img/logo_uapay-2.png');
+                        background-repeat: no-repeat;
+                        background-size: contain;
+                    } 
+                }
+            }
             &-form {
                 margin-top: 40px;
                 display: flex;
@@ -203,6 +346,13 @@
                     align-items: center;
                     display: none;
                 }
+                &-3 {
+                    margin-top: 40px;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    display: none;
+                }
                 &-row {
                     display: flex;
                     flex-wrap: wrap;
@@ -210,7 +360,7 @@
                 }
                 &-label {
                     padding:0 5px;
-                    width: 46%;
+                    width: 50%;
                     margin-bottom: 30px;
                     &--full {
                         width: 100%;
@@ -318,6 +468,239 @@
                         text-decoration: underline;
                     }
                 }
+                &-radio {
+                    &-label {
+                        display: inline-block !important;
+                        span {
+                            vertical-align: middle;
+                        }
+                        a {
+
+                        }
+                    }
+                }
+            }
+            &-row {
+                display: flex;
+                align-items: center;
+                margin-top: 29px;
+            }
+            &-list {
+                width: 100%;
+                display: flex;
+                flex-wrap: wrap;
+            }
+            &-item {
+                margin-bottom: 30px;
+                width: 33%;
+            }
+        }
+    }
+    &__body-rek {
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        &-head {
+            background: #FFE600;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            padding: 30px 0;
+        }
+        &-title {
+            color: #363636;
+            font-family: 'SF Pro Display', 'Arial', 'sans-serif';
+            font-size: 24px;
+            font-weight: 700;
+            line-height: 1.3em;
+            position: relative;
+            text-align: center;
+            width: fit-content;
+            /*&:before {
+                background: #ff009e;
+                box-shadow: 5px 5px 25px #ff009e;
+                content: '';
+                position: absolute;
+                left: -12px;
+                top: -5px;
+                height: 52px;
+                width: 52px;
+                border-radius: 50%;
+                z-index: -1;
+            }*/
+        }
+        &-content {
+            background: #fff;
+            width: 100%;
+            padding: 40px;
+            &-title {
+                font-family: 'SF Pro Display', 'Arial', 'sans-serif';
+                color: #323232;
+                font-size: 18px;
+                font-weight: 600;
+                line-height: 1.5em;
+                text-align: center;
+            }
+            &-text {
+                font-family: 'SF Pro Display', 'Arial', 'sans-serif';
+                color: #C4C4C4;
+                font-size: 15px;
+                font-weight: 400;
+                line-height: 26px;
+                text-align: center;
+            }
+            &-progress {
+                margin-top: 15px;
+                height: 11px;
+                background: #F3F3F3;
+                border-radius: 26px;
+                &-bar {
+                    background: #69DDCA;
+                    box-shadow: 0px 3px 15px rgba(0, 222, 203, 0.5);
+                    border-radius: 26px;
+                    height: 11px;
+                    transition: width .6s ease;
+                }
+            }
+            &-form {
+                margin-top: 40px;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                display: none;
+                &-2 {
+                    margin-top: 40px;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    display: none;
+                }
+                &-row {
+                    display: flex;
+                    flex-wrap: wrap;
+                    width: 100%;
+                }
+                &-label {
+                    padding:0 5px;
+                    width: 50%;
+                    margin-bottom: 30px;
+                    &--full {
+                        width: 100%;
+                    }
+                }
+                &-text {
+                    font-family: 'SF Pro Display', 'Arial', 'sans-serif';
+                    font-weight: 200;
+                    font-size: 16px;
+                    line-height: 19px;
+                    color: #363636;
+                    margin-bottom: 18px;
+                    &.required {
+                        &::after {
+                            content: "*";
+                            color: #FF0000;
+                            margin-left: 4px;
+                        }
+                    }
+                }
+                &-input {
+                    font-family: 'SF Pro Display', 'Arial', 'sans-serif';
+                    color: #999;
+                    font-size: 14px;
+                    font-weight: 400;
+                    outline: none;
+                    height: 50px;
+                    background: #fff;
+                    box-shadow: none;
+                    line-height: 18px;
+                    padding: 10px 20px;
+                    border-radius: 4px;
+                    display: inline-block;
+                    vertical-align: middle;
+                    border: 1px solid #dbdbdb;
+                    width: 100%;
+                    &::placeholder {
+                        font-family: 'SF Pro Display', 'Arial', 'sans-serif';
+                        color: #999;
+                        font-size: 14px;
+                        font-weight: 400;
+                    }
+                    &:focus {
+                        border: 1px solid #69DDCA;
+                    }
+                }
+                &-for_svg {
+                    position: relative;
+                }
+                &-svg {
+                    top: 50%;
+                    transform: translateY(-50%);
+                    right: 20px;
+                    width: 22px;
+                    height: 22px;
+                    position: absolute;
+                    cursor: pointer;
+                }
+                &-button {
+                    font-family: 'SF Pro Display', 'Arial', 'sans-serif';
+                    background: #FF009E;
+                    box-shadow: 0px 4px 23px rgba(255, 0, 158, 0.41);
+                    border-radius: 35px;
+                    height: 50px;
+                    line-height: 50px;
+                    color: #fff;
+                    font-weight: 600;
+                    min-width: 200px;
+                    text-align: center;
+                    padding: 0 20px;
+                    font-size: 16px;
+                    outline: none;
+                    cursor: pointer;
+                    &:hover,
+                    &:focus {
+                        background: #C70077;
+                        color: #fff;
+                    }
+                }
+                &-textarea {
+                    font-family: 'SF Pro Display', 'Arial', 'sans-serif';
+                    color: #999;
+                    font-size: 14px;
+                    font-weight: 400;
+                    outline: none;
+                    height: 50px;
+                    background: #fff;
+                    box-shadow: none;
+                    line-height: 18px;
+                    padding: 10px 20px;
+                    border-radius: 4px;
+                    display: inline-block;
+                    vertical-align: middle;
+                    border: 1px solid #dbdbdb;
+                    width: 100%;
+                    min-height: 140px;
+                    resize: vertical;
+                }
+                &-final {
+                    margin: 10px 20px 30px 0;
+                    a {
+                        color: #363636;
+                        font-weight: 300;
+                        color: #69DDCA;
+                        text-decoration: underline;
+                    }
+                }
+                &-radio {
+                    &-label {
+                        display: inline-block !important;
+                        span {
+                            vertical-align: middle;
+                        }
+                        a {
+
+                        }
+                    }
+                }
             }
             &-row {
                 display: flex;
@@ -421,6 +804,21 @@
         }
     }
 
+}
+
+@media (max-width: 676px) {
+    .modal {
+        &__body {
+            &-blog {
+                &-content {
+                    padding: 20px;
+                    &-item {
+                        width: 50%;
+                    }
+                }
+            }
+        }
+    }
 }
 
 @media (max-width: 568px) {
