--- a/src/scss/UI/sticky.scss
+++ b/src/scss/UI/sticky.scss
@@ -19,6 +19,10 @@
         margin-top: 1px;
         display: flex;
         margin-bottom: 10px;
+        &.ok {
+            border: 2px solid #69ddca;
+            color: #69ddca;
+        }
     }
     &__text {
         color: #000;
