--- a/src/scss/kak-effektivno-rabotat-s-blogerami/eff-10.scss
+++ b/src/scss/kak-effektivno-rabotat-s-blogerami/eff-10.scss
@@ -1,4 +1,4 @@
-.good-9 {
+.eff-10 {
     width: 100%;
     display: flex;
     justify-content: center;
@@ -78,7 +78,7 @@
 }
 
 @media (max-width: 1000px) {
-    .good-9 {
+    .eff-10 {
         padding: 170px 0 80px;
         &__wrap {
             width: 90%;
