--- a/src/scss/baza_znaniy/baza-9.scss
+++ b/src/scss/baza_znaniy/baza-9.scss
@@ -1,4 +1,4 @@
-.good-9 {
+.baza-9 {
     width: 100%;
     display: flex;
     justify-content: center;
@@ -78,7 +78,7 @@
 }
 
 @media (max-width: 1000px) {
-    .good-9 {
+    .baza-9 {
         padding: 170px 0 80px;
         &__wrap {
             width: 90%;
