--- a/src/scss/blogeram/blog-4.scss
+++ b/src/scss/blogeram/blog-4.scss
@@ -24,7 +24,7 @@
         width: 482px;
 
         &-title {
-            font-family: "SF Pro Display", Sans-serif;
+            font-family: 'SF Pro Display', 'Arial', 'sans-serif';
             font-size: 30px;
             font-weight: 700;
             text-transform: uppercase;
@@ -36,7 +36,7 @@
         }
         &-item {
             color: #4A4A4A;
-            font-family: "SF Pro Display", Sans-serif;
+            font-family: 'SF Pro Display', 'Arial', 'sans-serif';
             font-size: 20px;
             line-height: 1.5em;
             margin-bottom: 15px;
@@ -55,7 +55,7 @@
         }
         &-button {
             margin-top: 38px;
-            font-family: "SF Pro Display", Sans-serif;
+            font-family: 'SF Pro Display', 'Arial', 'sans-serif';
             font-size: 15px;
             font-weight: 700;
             transition: 0.5s;
