--- a/src/scss/good-choice/good-6.scss
+++ b/src/scss/good-choice/good-6.scss
@@ -8,7 +8,7 @@
         width: 1024px;
     }
     &__title {
-        font-family: "SF Pro Display", Sans-serif;
+        font-family: 'SF Pro Display', 'Arial', 'sans-serif';
         font-size: 30px;
         font-weight: 700;
         text-transform: uppercase;
@@ -46,7 +46,7 @@
             margin-top: 35px;
             line-height: 1.7em;
             color: #363636;
-            font-family: "SF Pro Display", Sans-serif;
+            font-family: 'SF Pro Display', 'Arial', 'sans-serif';
             font-weight: 400;
             &--data {
                 width: 25%;
@@ -94,7 +94,7 @@
             &-title {
                 text-align: right;
                 color: #363636;
-                font-family: "SF Pro Display", Sans-serif;
+                font-family: 'SF Pro Display', 'Arial', 'sans-serif';
                 font-weight: 700;
                 line-height: 1em;
                 margin-top: 10px;
