--- a/src/scss/main/main-3.scss
+++ b/src/scss/main/main-3.scss
@@ -8,7 +8,7 @@
         padding: 0 2%;
     }
     &__title {
-        font-family: "SF Pro Display", Sans-serif;
+        font-family: 'SF Pro Display', 'Arial', 'sans-serif';
         font-size: 30px;
         font-weight: 700;
         text-transform: none;
@@ -72,7 +72,7 @@
     }
     &__text {
         color: #363636;
-        font-family: "SF Pro Display", Sans-serif;
+        font-family: 'SF Pro Display', 'Arial', 'sans-serif';
         font-size: 19px;
         font-weight: 800;
         position: absolute;
