--- a/src/scss/main/main-9.scss
+++ b/src/scss/main/main-9.scss
@@ -47,14 +47,14 @@
         }
         &-title {
             color: #fff;
-            font-family: "SF Pro Display", Sans-serif;
+            font-family: 'SF Pro Display', 'Arial', 'sans-serif';
             font-size: 29px;
             font-weight: 800;
             line-height: 1.6em;
         }
         &-text {
             color: #fff;
-            font-family: "SF Pro Display", Sans-serif;
+            font-family: 'SF Pro Display', 'Arial', 'sans-serif';
             font-size: 21px;
             font-weight: 800;
             line-height: 1.6em;
@@ -73,7 +73,7 @@
             }
         }
         &-button {
-            font-family: "SF Pro Display", Sans-serif;
+            font-family: 'SF Pro Display', 'Arial', 'sans-serif';
             font-size: 15px;
             line-height: 1;
             font-weight: 700;
