--- a/src/scss/UI/faq.scss
+++ b/src/scss/UI/faq.scss
@@ -23,7 +23,7 @@
         border-width: 1px;
         border-color: #E6E6E6;
         color: #363636;
-        font-family: "SF Pro Display", Sans-serif;
+        font-family: 'SF Pro Display', 'Arial', 'sans-serif';
         font-size: 22px;
         font-weight: 700;
         line-height: 33px;
@@ -60,7 +60,7 @@
         border-width: 1px;
         border-bottom-color: #E6E6E6;
         color: #000000;
-        font-family: "SF Pro Display", Sans-serif;
+        font-family: 'SF Pro Display', 'Arial', 'sans-serif';
         font-size: 14px;
         font-weight: 400;
         line-height: 21px;
