--- a/src/scss/blogeram/blog-1.scss
+++ b/src/scss/blogeram/blog-1.scss
@@ -55,7 +55,7 @@
     }
     &__title {
         color: #363636;
-        font-family: "SF Pro Display", Sans-serif;
+        font-family: 'SF Pro Display', 'Arial', 'sans-serif';
         font-size: 36px;
         font-weight: 900;
         line-height: 1.3em;
@@ -65,7 +65,7 @@
     }
     &__text {
         color: #363636;
-        font-family: "SF Pro Display", Sans-serif;
+        font-family: 'SF Pro Display', 'Arial', 'sans-serif';
         font-size: 18px;
         font-weight: 400;
         margin-bottom: 45px;
@@ -77,7 +77,7 @@
         margin-left: 10px;
     }
     &__link {
-        font-family: "SF Pro Display", Sans-serif;
+        font-family: 'SF Pro Display', 'Arial', 'sans-serif';
         font-size: 15px;
         font-weight: 700;
         transition: 0.5s;
