--- a/src/scss/good-choice/good-3.scss
+++ b/src/scss/good-choice/good-3.scss
@@ -36,7 +36,7 @@
     }
     &__title {
         color: #363636;
-        font-family: "SF Pro Display", Sans-serif;
+        font-family: 'SF Pro Display', 'Arial', 'sans-serif';
         font-size: 30px;
         font-weight: 700;
         text-transform: none;
@@ -47,7 +47,7 @@
     &__text {
         margin-top: 50px;
         color: #363636;
-        font-family: "SF Pro Display", Sans-serif;
+        font-family: 'SF Pro Display', 'Arial', 'sans-serif';
         font-weight: 400;
         line-height: 1.7em;
         text-align: center;
@@ -72,7 +72,7 @@
         }
         &-num {
             color: #363636;
-            font-family: "SF Pro Display", Sans-serif;
+            font-family: 'SF Pro Display', 'Arial', 'sans-serif';
             font-size: 82px;
             font-weight: 700;
             line-height: 1em;
@@ -108,7 +108,7 @@
         }
         &-text {
             color: #363636;
-            font-family: "SF Pro Display", Sans-serif;
+            font-family: 'SF Pro Display', 'Arial', 'sans-serif';
             font-size: 19px;
             font-weight: 700;
             text-transform: uppercase;
