--- a/src/scss/good-choice/good-4.scss
+++ b/src/scss/good-choice/good-4.scss
@@ -10,7 +10,7 @@
     &__title {
         text-align: center;
         color: #363636;
-        font-family: "SF Pro Display", Sans-serif;
+        font-family: 'SF Pro Display', 'Arial', 'sans-serif';
         font-size: 30px;
         font-weight: 700;
         text-transform: uppercase;
@@ -48,7 +48,7 @@
             &-title {
                 text-transform: uppercase;
                 color: #FF009E;
-                font-family: "SF Pro Display", Sans-serif;
+                font-family: 'SF Pro Display', 'Arial', 'sans-serif';
                 font-size: 22px;
                 font-weight: 700;
                 line-height: 1.5em;
@@ -56,7 +56,7 @@
             &-text {
                 margin-top: 8px;
                 color: #363636;
-                font-family: "SF Pro Display", Sans-serif;
+                font-family: 'SF Pro Display', 'Arial', 'sans-serif';
                 font-size: 17px;
                 font-weight: 400;
                 line-height: 1.4em;
@@ -105,7 +105,7 @@
             &-title {
                 margin-left: 25px;
                 text-transform: uppercase;
-                font-family: "SF Pro Display", Sans-serif;
+                font-family: 'SF Pro Display', 'Arial', 'sans-serif';
                 font-size: 21px;
                 font-weight: 700;
             }
@@ -114,7 +114,7 @@
             }
             &-text {
                 color: #363636;
-                font-family: "SF Pro Display", Sans-serif;
+                font-family: 'SF Pro Display', 'Arial', 'sans-serif';
                 font-weight: 400;
                 line-height: 26px;
                 font-size: 16px;
@@ -146,7 +146,7 @@
         &__title {
             // text-align: center;
             // color: #363636;
-            // font-family: "SF Pro Display", Sans-serif;
+            // font-family: 'SF Pro Display', 'Arial', 'sans-serif';
             // font-size: 30px;
             // font-weight: 700;
             // text-transform: uppercase;
@@ -184,7 +184,7 @@
                 &-title {
                     // text-transform: uppercase;
                     // color: #FF009E;
-                    // font-family: "SF Pro Display", Sans-serif;
+                    // font-family: 'SF Pro Display', 'Arial', 'sans-serif';
                     font-size: 18px;
                     // font-weight: 700;
                     // line-height: 1.5em;
@@ -192,7 +192,7 @@
                 &-text {
                     // margin-top: 8px;
                     // color: #363636;
-                    // font-family: "SF Pro Display", Sans-serif;
+                    // font-family: 'SF Pro Display', 'Arial', 'sans-serif';
                     font-size: 14px;
                     // font-weight: 400;
                     // line-height: 1.4em;
@@ -241,7 +241,7 @@
                 &-title {
                     // margin-left: 25px;
                     // text-transform: uppercase;
-                    // font-family: "SF Pro Display", Sans-serif;
+                    // font-family: 'SF Pro Display', 'Arial', 'sans-serif';
                     // font-size: 21px;
                     // font-weight: 700;
                 }
@@ -250,7 +250,7 @@
                 }
                 &-text {
                     // color: #363636;
-                    // font-family: "SF Pro Display", Sans-serif;
+                    // font-family: 'SF Pro Display', 'Arial', 'sans-serif';
                     // font-weight: 400;
                     // line-height: 26px;
                     font-size: 14px;
@@ -275,7 +275,7 @@
         &__title {
             // text-align: center;
             // color: #363636;
-            // font-family: "SF Pro Display", Sans-serif;
+            // font-family: 'SF Pro Display', 'Arial', 'sans-serif';
             font-size: 25px;
             line-height: 1.3em;
             // font-weight: 700;
@@ -317,7 +317,7 @@
                 &-title {
                     // text-transform: uppercase;
                     // color: #FF009E;
-                    // font-family: "SF Pro Display", Sans-serif;
+                    // font-family: 'SF Pro Display', 'Arial', 'sans-serif';
                     // font-size: 18px;
                     // font-weight: 700;
                     // line-height: 1.5em;
@@ -326,7 +326,7 @@
                 &-text {
                     // margin-top: 8px;
                     // color: #363636;
-                    // font-family: "SF Pro Display", Sans-serif;
+                    // font-family: 'SF Pro Display', 'Arial', 'sans-serif';
                     // font-size: 14px;
                     // font-weight: 400;
                     // line-height: 1.4em;
@@ -376,7 +376,7 @@
                 &-title {
                     // margin-left: 25px;
                     // text-transform: uppercase;
-                    // font-family: "SF Pro Display", Sans-serif;
+                    // font-family: 'SF Pro Display', 'Arial', 'sans-serif';
                     // font-size: 21px;
                     // font-weight: 700;
                 }
@@ -385,7 +385,7 @@
                 }
                 &-text {
                     // color: #363636;
-                    // font-family: "SF Pro Display", Sans-serif;
+                    // font-family: 'SF Pro Display', 'Arial', 'sans-serif';
                     // font-weight: 400;
                     // line-height: 26px;
                     // font-size: 14px;
