--- a/src/scss/kak-effektivno-rabotat-s-blogerami/eff-10.scss
+++ b/src/scss/kak-effektivno-rabotat-s-blogerami/eff-10.scss
@@ -39,7 +39,7 @@
         width: 482px;
         &-title {
             color: #363636;
-            font-family: "SF Pro Display", Sans-serif;
+            font-family: 'SF Pro Display', 'Arial', 'sans-serif';
             font-size: 26px;
             font-weight: 700;
             text-transform: uppercase;
@@ -48,14 +48,14 @@
         &-text {
             margin-top: 35px;
             color: #363636;
-            font-family: "SF Pro Display", Sans-serif;
+            font-family: 'SF Pro Display', 'Arial', 'sans-serif';
             font-size: 15px;
             font-weight: 400;
             line-height: 26px;
         }
         &-button {
             margin-top: 50px;
-            font-family: "SF Pro Display", Sans-serif;
+            font-family: 'SF Pro Display', 'Arial', 'sans-serif';
             font-size: 15px;
             font-weight: 700;
             transition: 0.5s;
