--- a/src/scss/kak-effektivno-rabotat-s-blogerami/eff-8.scss
+++ b/src/scss/kak-effektivno-rabotat-s-blogerami/eff-8.scss
@@ -39,7 +39,7 @@
     &__info {
         width: 482px;
         &-title {
-            font-family: "SF Pro Display", Sans-serif;
+            font-family: 'SF Pro Display', 'Arial', 'sans-serif';
             font-size: 30px;
             font-weight: 700;
             text-transform: uppercase;
@@ -49,7 +49,7 @@
         &-text {
             margin-top: 35px;
             color: #363636;
-            font-family: "SF Pro Display", Sans-serif;
+            font-family: 'SF Pro Display', 'Arial', 'sans-serif';
             font-weight: 400;
             line-height: 1.7em;
             font-size: 16px;
