--- a/src/scss/kak-effektivno-rabotat-s-blogerami/eff-9.scss
+++ b/src/scss/kak-effektivno-rabotat-s-blogerami/eff-9.scss
@@ -14,9 +14,9 @@
     }
     &__title {
         color: #363636;
-        font-family: "SF Pro Display", Sans-serif;
+        font-family: 'SF Pro Display', 'Arial', 'sans-serif';
         font-size: 30px;
-        font-weight: 600;
+        font-weight: 700;
         text-transform: uppercase;
         line-height: 1.4em;
         text-align: center;
@@ -25,7 +25,7 @@
         margin-top: 20px;
         text-align: center;
         color: #363636;
-        font-family: "SF Pro Display", Sans-serif;
+        font-family: 'SF Pro Display', 'Arial', 'sans-serif';
         font-weight: 400;
         line-height: 26px;
         &:first-child {
