--- a/src/scss/main/main-6.scss
+++ b/src/scss/main/main-6.scss
@@ -12,7 +12,7 @@
         margin-top: 60px;
         text-align: center;
         color: #363636;
-        font-family: "SF Pro Display", Sans-serif;
+        font-family: 'SF Pro Display', 'Arial', 'sans-serif';
         font-size: 19px;
         font-weight: 400;
         line-height: 1.5em;
