--- a/src/scss/main/main-8.scss
+++ b/src/scss/main/main-8.scss
@@ -11,7 +11,7 @@
     &__title {
         margin: 0 0 80px 0;
         color: #363636;
-        font-family: "SF Pro Display", Sans-serif;
+        font-family: 'SF Pro Display', 'Arial', 'sans-serif';
         font-size: 30px;
         font-weight: 700;
         text-transform: none;
