--- a/src/scss/reklamodatelyam/rek-4.scss
+++ b/src/scss/reklamodatelyam/rek-4.scss
@@ -60,7 +60,7 @@
         &-title {
             text-transform: uppercase;
             color: #363636;
-            font-family: "SF Pro Display", Sans-serif;
+            font-family: 'SF Pro Display', 'Arial', 'sans-serif';
             font-size: 23px;
             font-weight: 700;
             line-height: 1;
@@ -69,7 +69,7 @@
             margin-top: 40px;
             line-height: 1.7em;
             color: #363636;
-            font-family: "SF Pro Display", Sans-serif;
+            font-family: 'SF Pro Display', 'Arial', 'sans-serif';
             font-size: 18px;
             font-weight: 400;
         }
